[gd_scene load_steps=3 format=3 uid="uid://cwaeql3tlbvv2"]

[ext_resource type="Script" path="res://menus/options.gd" id="1_k43mt"]
[ext_resource type="Theme" uid="uid://ckmqat7sg1jdb" path="res://themes/default_theme.tres" id="2_1i8el"]

[node name="Options" type="Node"]
script = ExtResource("1_k43mt")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.12549, 0.12549, 0.12549, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 140

[node name="OptionsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_1i8el")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
metadata/_edit_lock_ = true

[node name="OptionsContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/OptionsContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_1i8el")
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 32
columns = 2

[node name="MasterLabel" type="Label" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Master"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="Label" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="Label" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/OptionsContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="."]
offset_left = 210.0
offset_top = 400.0
offset_right = 450.0
offset_bottom = 431.0
theme = ExtResource("2_1i8el")
text = "Back"

[connection signal="value_changed" from="MarginContainer/OptionsContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/OptionsContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/OptionsContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
